--- a/index.html
+++ b/index.html
@@ -1,43 +1,105 @@
+
+  
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>UBA Online Banking</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>UBA Online Banking</title>
+    <style>
+        body {
+            background-color: #ffffff; /* white background */
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #d2232a; /* UBA red */
+            padding: 20px;
+        }
+
+        header img {
+            max-width: 150px;
+            height: auto;
+            margin-bottom: 10px;
+        }
+
+        header h1 {
+            margin: 0;
+            color: #ffffff;
+            font-size: 28px;
+        }
+
+        .container {
+            margin: 50px auto;
+            width: 300px;
+            padding: 30px;
+            border: 2px solid #d2232a;
+            border-radius: 10px;
+            background-color: #d2232a;
+            color: #ffffff;
+        }
+
+        .container input[type="text"],
+        .container input[type="password"] {
+            width: 90%;
+            padding: 10px;
+            margin: 10px 0;
+            border: none;
+            border-radius: 5px;
+        }
+
+        .container input[type="submit"] {
+            width: 95%;
+            padding: 10px;
+            margin-top: 15px;
+            border: none;
+            border-radius: 5px;
+            background-color: #ffffff;
+            color: #d2232a;
+            font-weight: bold;
+            cursor: pointer;
+        }
+
+        .dropdown {
+            margin-top: 20px;
+        }
+
+        .dropdown select {
+            padding: 10px;
+            width: 100%;
+            border-radius: 5px;
+            border: none;
+        }
+    </style>
 </head>
 <body>
 
-<header>
-  <h1>UBA Online Banking</h1>
-</header>
+    <header>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/7/70/UBA_logo.svg" alt="UBA Logo">
+        <h1>Welcome to UBA Online Banking</h1>
+    </header>
 
-<!-- LOGIN -->
-<section id="login-section">
-  <h2>Login</h2>
-  <input type="text" id="username" placeholder="Username">
-  <input type="password" id="password" placeholder="Password">
-  <button onclick="login()">Login</button>
-  <p id="login-message"></p>
-</section>
+    <div class="container">
+        <form>
+            <label for="username">Username:</label><br>
+            <input type="text" id="username" name="username" value="Jane"><br>
 
-<!-- DASHBOARD -->
-<section id="dashboard" style="display:none;">
-  <h2>Welcome, <span id="user-name"></span></h2>
-  <p><strong>Balance:</strong> ₦<span id="balance"></span></p>
+            <label for="password">Password:</label><br>
+            <input type="password" id="password" name="password" value="12345"><br>
 
-  <h3>Transactions</h3>
-  <ul id="transaction-list"></ul>
+            <input type="submit" value="Login">
+        </form>
 
-  <h3>Transfer Money</h3>
-  <input type="text" id="recipient" placeholder="Recipient">
-  <input type="number" id="amount" placeholder="₦ Amount">
-  <button onclick="transferMoney()">Send</button>
+        <div class="dropdown">
+            <select>
+                <option value="">Select an option</option>
+                <option value="open-account">Open an Account</option>
+                <option value="register">Register</option>
+            </select>
+        </div>
+    </div>
 
-  <p id="message"></p>
-
-  <button class="logout-btn" onclick="logout()">Logout</button>
-</section>
-
-<script src="script.js"></script>
 </body>
 </html>
