--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
             text-align: center;
             margin: 0;
             padding: 0;
-            color: #d2232a;
+            color: #ffffff;
         }
 
         header {
-            background-color: #ffffff; /* white header */
+            background-color: #000000; /* black header */
             padding: 20px;
         }
 
@@ -29,9 +29,9 @@
             width: 320px;
             padding: 40px;
             border-radius: 12px;
-            background-color: #ffffff; /* white form background */
-            color: #d2232a; /* red text inside form */
-            box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+            background-color: #000000; /* black form background */
+            color: #ffffff; /* white text inside form */
+            box-shadow: 0 8px 20px rgba(0,0,0,0.5);
             transition: transform 0.3s;
         }
 
@@ -44,15 +44,17 @@
             width: 90%;
             padding: 12px;
             margin: 12px 0;
-            border: 1px solid #d2232a;
+            border: 1px solid #d2232a; /* red border */
             border-radius: 6px;
+            background-color: #000000; /* black input background */
+            color: #ffffff; /* white text */
             transition: all 0.3s;
         }
 
         .container input[type="text"]:focus,
         .container input[type="password"]:focus {
-            border: 2px solid #a81a21; /* darker red on focus */
-            box-shadow: 0 0 8px rgba(168, 26, 33, 0.6);
+            border: 2px solid #ffffff; /* white border on focus */
+            box-shadow: 0 0 8px rgba(255, 255, 255, 0.6);
             outline: none;
         }
 
@@ -82,8 +84,9 @@
             padding: 12px;
             width: 100%;
             border-radius: 6px;
-            border: 1px solid #d2232a;
-            color: #d2232a;
+            border: 1px solid #d2232a; /* red border */
+            background-color: #000000; /* black dropdown background */
+            color: #ffffff; /* white text */
             font-weight: bold;
             cursor: pointer;
             transition: all 0.3s;
@@ -91,8 +94,8 @@
 
         .dropdown select:hover,
         .dropdown select:focus {
-            border: 2px solid #a81a21;
-            box-shadow: 0 0 8px rgba(168, 26, 33, 0.6);
+            border: 2px solid #ffffff; /* white border on hover/focus */
+            box-shadow: 0 0 8px rgba(255, 255, 255, 0.6);
             outline: none;
         }
     </style>
